--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "framer-motion": "^12.23.22",
+    "lucide-react": "^0.545.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.21.1",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "tailwindcss": "^3.4.0",
     "vite": "^5.0.0"
   }
 }
